unpackaged/main/default/objects/GSR_Submission__c/GSR_Submission__c.object-meta.xml
<CustomObject>
    <label>GSR Submission</label>
    <nameField>
        <displayFormat>GSR S-{00000}</displayFormat>
        <label>GSR Submission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSR Submission</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>