unpackaged/main/default/objects/GSR_Submission__c/fields/Account_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_Address__c</fullName>
    <label>Account Email Address</label>
    <type>Email</type>
</CustomField>