unpackaged/main/default/objects/GSR_Submission__c/fields/Approved_CO_alarms_fitted__c.field-meta.xml
<CustomField>
    <fullName>Approved_CO_alarms_fitted__c</fullName>
    <label>Approved CO alarms fitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>