unpackaged/main/default/objects/GSR_Submission__c/fields/CO_alarms_are_in_date__c.field-meta.xml
<CustomField>
    <fullName>CO_alarms_are_in_date__c</fullName>
    <label>CO alarms are in date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>