unpackaged/main/default/objects/GSR_Submission__c/fields/CO_Alarms_From_GSR_Flow__c.field-meta.xml
<CustomField>
    <fullName>CO_Alarms_From_GSR_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO Alarms From GSR Flow</label>
    <type>Checkbox</type>
</CustomField>