unpackaged/main/default/objects/GSR_Submission__c/fields/Customer_first_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_first_name__c</fullName>
    <formula>Work_Order_Lookup__r.Job__r.Job_Raised_by__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer first name</label>
    <type>Text</type>
</CustomField>