unpackaged/main/default/objects/GSR_Submission__c/fields/Emergency_control_valve_access_satisfact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_control_valve_access_satisfact__c</fullName>
    <label>Emergency control valve access satisfact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>