unpackaged/main/default/objects/GSR_Submission__c/fields/Engineer_Name__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Name__c</fullName>
    <formula>Service_Resource_Lookup__r.RelatedRecord.FirstName + &#39; &#39; + Service_Resource_Lookup__r.RelatedRecord.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineer Name</label>
    <type>Text</type>
</CustomField>