unpackaged/main/default/objects/GSR_Submission__c/fields/Equipotential_bonding_satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Equipotential_bonding_satisfactory__c</fullName>
    <label>Equipotential bonding satisfactory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>