unpackaged/main/default/objects/GSR_Submission__c/fields/Gas_Installation_Pipework_From_GSR_Flow__c.field-meta.xml
<CustomField>
    <fullName>Gas_Installation_Pipework_From_GSR_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gas Installation Pipework From GSR Flow</label>
    <type>Checkbox</type>
</CustomField>