unpackaged/main/default/objects/GSR_Submission__c/fields/Gas_Safe_Engineer_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Gas_Safe_Engineer_License_Number__c</fullName>
    <formula>Service_Resource_Lookup__r.Gas_safe_engineer_license_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gas Safe Engineer License Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>