unpackaged/main/default/objects/GSR_Submission__c/fields/Generate_GSR_Submission_Report__c.field-meta.xml
<CustomField>
    <fullName>Generate_GSR_Submission_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate GSR Submission Report</label>
    <type>Checkbox</type>
</CustomField>