unpackaged/main/default/objects/GSR_Submission__c/fields/GSR_Certificate_URL__c.field-meta.xml
<CustomField>
    <fullName>GSR_Certificate_URL__c</fullName>
    <label>GSR Certificate URL</label>
    <type>Url</type>
</CustomField>