unpackaged/main/default/objects/GSR_Submission__c/fields/GSR_Status__c.field-meta.xml
<CustomField>
    <fullName>GSR_Status__c</fullName>
    <description>This status reflects whether/not this GSR record has already been approved by the Engineering Manager.</description>
    <label>GSR_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>