unpackaged/main/default/objects/GSR_Submission__c/fields/Manager_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will default to False and will be updated as soon as the GSR Submission record has been reviewed and approved.</description>
    <inlineHelpText>Tick this box once this record has been approved by the engineering manager.</inlineHelpText>
    <label>Manager Approval Received</label>
    <type>Checkbox</type>
</CustomField>