unpackaged/main/default/objects/GSR_Submission__c/fields/Number_Installation_Faults_Reported__c.field-meta.xml
<CustomField>
    <fullName>Number_Installation_Faults_Reported__c</fullName>
    <description>This is count of the number of installation faults reported, as part of this GSR Assessment.</description>
    <label>Number Installation Faults Reported</label>
    <summaryForeignKey>GSR_Installation_Fault__c.GSR_Submission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>