unpackaged/main/default/objects/GSR_Submission__c/fields/Number_of_Appliances_Tested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Appliances_Tested__c</fullName>
    <description>This field will calculate how many appliance records have been added to this record.</description>
    <label>Number of Appliances Tested</label>
    <summaryForeignKey>GSR_Appliance_Results__c.GSR_Submission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>