unpackaged/main/default/objects/GSR_Submission__c/fields/Record_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Record_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the user which has approved the GSR Submission record.</description>
    <inlineHelpText>Please select the user who has approved this GSR Submission record.</inlineHelpText>
    <label>Record Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GSR_Submission</relationshipName>
    <type>Lookup</type>
</CustomField>