unpackaged/main/default/objects/GSR_Submission__c/fields/Record_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Approved_Date__c</fullName>
    <description>This is the date when this record was approved.</description>
    <label>Record Approved Date</label>
    <type>DateTime</type>
</CustomField>