unpackaged/main/default/objects/GSR_Submission__c/fields/Record_Update_Notes__c.field-meta.xml
<CustomField>
    <fullName>Record_Update_Notes__c</fullName>
    <description>This field will include any/all changes which the engineering manager has made to the GSR Submission record. This is a reflection of the differences between the physical certificate provided on site and the electronic certificate to be emailed to the account holder.</description>
    <inlineHelpText>This field should report any/all changes made to the GSR Submission record. Any/all changes, between the physical certificate provided on site and the electronic certificate, should be noted here.</inlineHelpText>
    <label>Record_Update_Notes</label>
    <type>TextArea</type>
</CustomField>