unpackaged/main/default/objects/GSR_Submission__c/fields/Related_Account_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Email_Formula__c</fullName>
    <formula>Work_Order_Lookup__r.Account.Invoicing_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Email Formula</label>
    <type>Text</type>
</CustomField>