unpackaged/main/default/objects/GSR_Submission__c/fields/Related_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Job_Id__c</fullName>
    <formula>CASESAFEID(Work_Order_Lookup__r.Job__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Job Id</label>
    <type>Text</type>
</CustomField>