unpackaged/main/default/objects/GSR_Submission__c/fields/Report_Received_By_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Received_By_Type__c</fullName>
    <description>This field serves to state if the receiver, of the certificate on site, was tenant, agent, landlord or home owner.</description>
    <inlineHelpText>Please select the appropriate option to specify whether the receiver, of this certificate, was the tenant, agent, landlord or home owner.</inlineHelpText>
    <label>Report Received By Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Home owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>