unpackaged/main/default/objects/GSR_Submission__c/fields/Satisfactory_visual_inspection__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_visual_inspection__c</fullName>
    <label>Satisfactory visual inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>