unpackaged/main/default/objects/GSR_Submission__c/fields/Service_Resource_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource (Lookup)</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>GSR Submission</relationshipLabel>
    <relationshipName>GSR_Submission</relationshipName>
    <type>Lookup</type>
</CustomField>