unpackaged/main/default/objects/GSR_Submission__c/fields/Smoke_alarms_fitted__c.field-meta.xml
<CustomField>
    <fullName>Smoke_alarms_fitted__c</fullName>
    <label>Smoke alarms fitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>