unpackaged/main/default/objects/GSR_Submission__c/fields/Support_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_Form_URL__c</fullName>
    <formula>Work_Order_Lookup__r.Job__r.Support_Form_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Form URL</label>
    <type>Text</type>
</CustomField>