unpackaged/main/default/objects/GSR_Submission__c/fields/Testing_of_CO_alarms_satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Testing_of_CO_alarms_satisfactory__c</fullName>
    <label>Testing of CO alarms satisfactory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>