unpackaged/main/default/objects/GSR_Submission__c/fields/Work_Order_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order (Lookup)</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>GSR Submission</relationshipLabel>
    <relationshipName>GSR_Submission</relationshipName>
    <type>Lookup</type>
</CustomField>