unpackaged/main/default/objects/GSR_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>GSR_Status__c</columns>
    <columns>NAME</columns>
    <columns>Account_Email_Address__c</columns>
    <columns>Work_Order_Lookup__c</columns>
    <columns>Service_Resource_Lookup__c</columns>
    <columns>Engineer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>